<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="10dp">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/namogoo_logo"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/app_name_title"
        android:paddingTop="50dp"
        android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/sdk_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdk_version"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:paddingBottom="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/user_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_control"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/user_switch"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>

            <TextView
                android:id="@+id/user_wiz_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_wiz_cart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/btn_tracking"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:background="@drawable/border_rect"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_streamline_icon_touchpad"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:paddingTop="10dp"
                    android:text="@string/tracking"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="wrap_content"></LinearLayout>
            <LinearLayout
                android:id="@+id/btn_incentive"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:background="@drawable/border_rect"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_streamline_icon_discount_square"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:paddingTop="10dp"
                    android:text="@string/incentive"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>