<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/shopping_cart"/>

    <LinearLayout
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:background="@drawable/namogoo_cube_background"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namogoo_cube"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:id="@+id/display_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/color"
                        android:textColor="@color/light_gray"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="#FECF3C"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size"
                        android:textColor="@color/light_gray"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_size"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"
                    android:orientation="horizontal"
                    android:gravity="bottom|center_horizontal">
                    <LinearLayout
                        android:id="@+id/remove_item"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:gravity="center"
                        android:background="@drawable/button_circle">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/circleButtonTextColor"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="-" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/count_items"
                        android:layout_width="30dp"
                        android:layout_height="28dp"
                        android:gravity="center"
                        android:text="0"/>
                    <LinearLayout
                        android:id="@+id/add_item"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:gravity="center"
                        android:background="@drawable/button_circle">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/circleButtonTextColor"
                            android:textStyle="bold"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="+" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:id="@+id/incentive_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:layout_margin="30dp"
        android:background="@drawable/incentive_background"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <!-- Coupon Code -->
        <RelativeLayout
            android:id="@+id/coupon_code_container"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <LinearLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:weightSum="2">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/coupon_border_color"/>
                <TextView
                    android:gravity="bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/promo_code" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/coupon_border_color"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/topless_border">
                <TextView
                    android:id="@+id/coupon_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/namogoo"/>
            </LinearLayout>
        </RelativeLayout>


        <TextView
            android:id="@+id/incentive_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:gravity="center"
            android:text="@string/incentive_result_below_threshold_first_tier"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/subtotal"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">
            <TextView
                android:id="@+id/subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/borderColor"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_buy_now"
            android:background="@drawable/button_background"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>